# fw-ledtransit-map

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/certs/: ca-bundle.pem
assets/docker/: Dockerfile
assets/prod_config/: bln1-2512-1.rs  bln2-2512-1.rs  virt1-1-1.rs
assets/proto_schema/: ledtransit_client.proto
assets/prov_public/: setup-wifi+de.html  setup-wifi+en.html  styles.css
assets/secure_ota/: p256_ota_public_key.der
bootloader/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
bootloader/main/: idf_component.yml
prov_server/: .gitignore  Cargo.toml
prov_server/public/: setup-wifi.html  styles.css
prov_server/public/lang/: de.json  en.json
prov_server/src/: main.rs
prov_server/test/: package-lock.json  package.json  server.js
src/: automation.rs  buttons.rs  config.rs  main.rs  time.rs  trace.rs  ui.rs  util.rs
src/display/: animations.rs  led_driver.rs  leds.rs  mod.rs  painter.rs  path_find.rs  renderer.rs
src/net/: auth_client.rs  dhcp_server.rs  http_server.rs  mod.rs  prov_server.rs  wifi_net.rs  ws_client.rs
src/store/: app_settings.rs  mod.rs  ota.rs  transit_data.rs
xtask/: Cargo.toml
xtask/src/: main.rs
