[package]
edition = "2024"
name = "fw-ledtransit-map"
rust-version = "1.88"
version = "1.1.0"
license = "GPL-3.0-only"
authors = ["Tim Holzhey <info@ledtransit.com>"]

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable", "defmt"] }
esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3", "defmt"] }
embassy-net = { version = "0.9.1", default-features = false, features = [
  "dhcpv4",
  "tcp",
  "dns",
  "defmt",
] }
esp-alloc = { version = "0.10.0", features = ["defmt", "internal-heap-stats"] }
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32c3",
  "unstable",
  "wifi",
  "defmt",
] }
smoltcp = { version = "0.13.1", default-features = false, features = [
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-tcp",
  "defmt",
] }
critical-section = "1.2.0"
static_cell = "2.1.1"
rgb = "0.8.53"
smart-leds = "0.4.0"
envparse = "0.1.0"
cfg-if = "1.0.4"
embassy-sync = "0.8.0"
embassy-futures = { version = "0.1.2", features = ["defmt"] }
defmt = { version = "1.1.1", features = ["alloc"] }
esp-storage = { version = "0.9.0", features = ["esp32c3", "defmt"] }
embedded-storage = "0.3.1"
heapless = { version = "0.9.3", features = ["defmt", "serde"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc"] }
postcard = { version = "1.1.3", features = ["defmt"] }
edge-dhcp = { version = "0.8.0", features = ["defmt"] }
edge-nal = "0.7.0"
edge-nal-embassy = { version = "0.9.0", features = ["defmt"] }
embedded-io-async = "0.7.0"
edge-net = "0.14.0"
edge-http = { version = "0.8.0", features = ["defmt"] }
serde-json-core = { version = "0.6.0", features = ["defmt"] }
edge-ws = { version = "0.8.0", features = ["defmt"] }
prost = { version = "0.14.4", default-features = false, features = ["derive"] }
bytes = { version = "1.12.1", features = [
  "extra-platforms",
], default-features = false }
condtype = "1.3.0"
defmt-rtt = { version = "1.3.0" }
smart-leds-trait = "0.3.2"
p256 = { version = "0.14.0", features = [
  "alloc",
  "arithmetic",
  "ecdsa",
  "pem",
], default-features = false }
nb = "1.1.0"
nourl = { version = "0.1.5", features = ["defmt"] }
mbedtls-rs = { version = "0.1.0", features = ["defmt"] }
edge-nal-tls = { version = "0.1.0", features = ["defmt"] }

[build-dependencies]
prost-build = "0.14.4"

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 'z'
panic = 'abort'
