[package]
edition = "2024"
name = "fw-ledtransit-map-xtask"
rust-version = "1.88"
version = "0.1.0"
authors = ["Tim Holzhey <info@ledtransit.com>"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
crc32fast = "1.5.0"
env_logger = { version = "0.11.8", features = ["auto-color"] }
heapless = { version = "0.9.2", features = ["alloc", "serde"] }
hex = "0.4.3"
log = "0.4.29"
p256 = "0.13.2"
postcard = "1.1.3"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0.228", features = ["alloc", "derive"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
toml = "0.9.11"
